Use proxy for umami script

--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Bingo Maker</title>
-    <script defer src="https://cloud.umami.is/script.js" data-website-id="4a8dad60-c577-4a2b-a46d-e7e47ba8a5d2"></script>
+    <script defer src="%REACT_APP_UMAMI_URL%" data-website-id="%REACT_APP_UMAMI_ID%"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
